# ferrules

./: .gitattributes  .gitignore  AGENT.md  Cargo.toml  Dockerfile  Dockerfile.gpu  README.md  ROADMAP.md  build-docker.sh  dist-workspace.toml  load_test.py  publish-docker.sh
.github/workflows/: release.yml
ferrules-api/: Cargo.toml
ferrules-api/src/: lib.rs  main.rs
ferrules-cli/: Cargo.toml
ferrules-cli/src/: error_formatter.rs  main.rs
ferrules-core/: Cargo.toml
ferrules-core/benches/: layout.rs
ferrules-core/src/: blocks.rs  debug_info.rs  draw.rs  entities.rs  error.rs  lib.rs  metrics.rs  utils.rs
ferrules-core/src/layout/: infer.rs  mod.rs  model.rs
ferrules-core/src/ocr/: mod.rs
ferrules-core/src/parse/: document.rs  merge.rs  mod.rs  native.rs  page.rs  table.rs  titles.rs
ferrules-core/src/parse/table/: lattice.rs  mod.rs  stream.rs  (+1 more)
ferrules-core/src/render/: html.rs
ferrules-debug/: Cargo.toml
ferrules-debug/src/: inspector.rs  main.rs  painter.rs  theme.rs  widgets.rs
infra/signoz/: docker-compose.yml  ferrules_dashboard.json  otel-collector-config.yaml
models/: table-transformer-structure-recognition-ane-b4.onnx  table-transformer-structure-recognition_fp16.onnx
python/: benchmark_ane.py  export_standard_fixed.py  export_table_transformer.py  export_table_transformer_ane.py  find_ane_sweet_spot.py  infer.py  infer_comp.py  infer_onnx.py  infer_profile.py  requirements.txt  yolo_to_onnx.py
scripts/: docling_benchmark.py  unstructured_benchmark.py  unstructured_test.py
src/: lib.rs  parse.rs
src/layout/: model.rs
