[workspace]
members = ["ferrules-core", "ferrules-cli", "ferrules-api", "ferrules-debug"]
resolver = "2"

[workspace.dependencies]
tracing = { version = "0.1.41", features = ["attributes"] }
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "registry",
] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["v4"] }
memmap2 = "0.9.5"
clap = { version = "4.5.23", features = ["derive", "env"] }
thiserror = "2.0.12"
rkyv = { version = "0.7.45", features = ["validation"] }
metrics = "0.24.1"

[profile.release]
# strip = "symbols"
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
